--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/night.css" id="theme">
+		<link rel="stylesheet" href="css/theme/serif.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -49,7 +49,7 @@
 				<section>
 					<h1>OneRNG</h1>
                     <p>An Open Hardware &amp; Open Source<br/><i>Verifiable</i> Random Number Generator</p>
-					<h3>Kiwicon 8</h3>
+					<h3>LCA2015</h3>
 					<p>Jim Cheetham &amp; Paul Campbell</p>
 					<p><small><a href="http://onerng.info/">OneRNG.info</a><br/>
                     <a href="http://moonbaseotago.com/onerng">Moonbase Otago</a></small>
@@ -60,7 +60,7 @@
                   	<section>
 						<h2>What is OneRNG?</h2>
                     	<p>It is a small USB-connected device</p>
-                    	<p>that speeds up &amp; increases your computer's ability<br/>
+                    	<p>It speeds up &amp; increases your computer's ability<br/>
 						to provide you with high-quality random numbers<p>
                   	</section>
 					<section>
@@ -73,7 +73,7 @@
 					</section>
                   	<section>
                     	<h2>Entropy Generator</h2>
-						<img id="iconic" src="avalanche.svg">
+						<img id="iconic" src="avalanche.svg"/>
                     	<p>The cake is a lie &hellip;</p>
                     	<p>By default, OneRNG measures <i>unpredictable</i> physical events<br/>
                     	from an <strong>avalanche diode</strong> circuit<br/>
@@ -81,80 +81,84 @@
                   	</section>
                   	<section>
                     	<h2>Whitened data</h2>
-						<img id="iconic" src="toothbrush.svg">
+						<img id="iconic" src="toothbrush.svg"/>
                     	<p>This raw data is then whitened through a CRC16 function
                     	which makes it good enough to be fed into your system</p>
-						<p>There is an AES hardware module available, but it is not used</p>
+						<p>There is an AES hardware module available, but it is not used
+						by the default firmware</p>
                   	</section>
 				  	<section>
 						<h2>Keep topping up the pool</h2>
-						<img id="iconic" src="pool.svg">
+						<img id="iconic" src="pool.svg"/>
 						<p>There's a 7.5KB pool of data that is kept full</p>
 						<p>New data is mixed in over the old data all the time</p>
 						<p>A LED on the board tells you when the pool is full<br/>
 						and warns you when it is getting empty</p>
 				  	</section>
                   	<section>
-                    	<h2>/dev/random</h2>
-						<img id="iconic" src="dice.svg">
+                    	<h2><code>/dev/urandom</code></h2>
+						<img id="iconic" src="dice.svg"/>
                     	<p>The results are fed into <code>/dev/random</code> as an additional
                     	entropy source for the system, and you should read them from there</p>
-		    			<p>If you RTFM, you'll read from <code>/dev/urandom</code> most of the time
+		    			<p>If you RTFM, you'll read from <code>/dev/urandom</code> all of the time
 						on Linux, but not necessarily on other OSs</p>
                   	</section>
                   	<section>
                     	<h2>And there's more &hellip;</h2>
-						<img id="iconic" src="radio.svg">
+						<img id="iconic" src="radio.svg"/>
                     	<p>You can also enable the RF monitor to get another source of entropy data
                     	with a higher quality &mdash; but at the cost of a little paranoia</p>
                   	</section>
 					<section>
 						<h2>The flow of data</h2>
-						<img src="OneRNGdataflow.svg">
+						<img src="OneRNGdataflow.svg"/>
 					</section>
 				</section>
 
 				<section>
 					<section>
 			            <h2>Why random numbers?</h2>
-						<img id="iconic" src="pacman.svg">
+						<img id="iconic" src="pacman.svg"/>
                     	<p>Cryptography has a huge appetite for random data<p>
                     	<p>And your online Privacy and Security depends on Crypto<p>
                     	<p>The more you encrypt, the more entropy you need to consume<p>
+			<p>altcoin also requires high quality random data - coins have been
+			stolen because of weak RNGs</p>
 					</section>
 					<section>
 						<h2>PRNG</h2>
-						<img id="iconic" src="walltime.svg">
-						<p>Most of the time you can get away with pseudo-random data</p>
-						<p>Don't use the default &lt;INSERT_LANGUAGE_HERE&gt; random() function!</p>
+						<img id="iconic" src="walltime.svg"/>
+						<p>Don't ever use the default &lt;INSERT_LANGUAGE_HERE&gt; random() function!</p>
 						<p>Don't use PID, or &mu;secs since epoch, or wall time</p>
+						<p>Don't do your own crypto, don't do your own RNG</p>
 						<p>By default, use <strong><code>/dev/urandom</code></strong></p>
 					</section>
 					<section>
 						<h2>True RNG vs PRNG</h2>
-						<img id="iconic" src="seeds.svg">
+						<img id="iconic" src="seeds.svg"/>
 						<p>Even if your PRNG is a CSPRNG, you'll feel the need for seed</p>
 						<p>Get your seed values from a True RNG</p>
-						<p>Generate your long-lived private keys from a True RNG</p>
+						<p>Only generate your long-lived private keys when there is sufficient entropy</p>
 					</section>
 					<section>
 						<h2>How much random can a /dev/random random?</h2>
-						<img id="iconic" src="anonymous.svg">
+						<img id="iconic" src="anonymous.svg"/>
 						<p>Never mind the quantity, feel the quality</p>
 						<p>&hellip; unless you needed quantity, that is &hellip;</p>
 						<p>If your True RNG returned sufficient data, why use PRNGs at all?</p>
+						<p>(because you must mix multiple entropy sources together)</p>
 					</section>
 				</section>
 
 				<section>
 					<section>
 						<h2>Just because you're paranoid &hellip;</h2>
-						<img id="iconic" src="surveillance.svg">
+						<img id="iconic" src="surveillance.svg"/>
 						<p>Even if they aren't out to get <i>you</i>, they'll get you.</p>
 					</section>
 					<section>
 						<h2>Known Badness</h2>
-						<p><img id="iconic" src="incognito.svg"></p>
+						<p><img id="iconic" src="incognito.svg"/></p>
 						<ul>
 						<li>RSA SecurID token breach</li>
 						<li>The entire Certification Authority system</li>
@@ -164,7 +168,7 @@
 					</section>
 					<section>
 						<h2>Known Badness II</h2>
-						<p><img id="iconic" src="incognito.svg"></p>
+						<p><img id="iconic" src="incognito.svg"/></p>
 						<ul>
 						<li>Supply-chain interception</li>
 						<li>BIOS Chronomancy; will persist across reflashing</li>
@@ -174,7 +178,7 @@
 					</section>
 					<section>
 						<h2>How far is too far?</h2>
-						<img id="iconic" src="layersdown.svg">
+						<img id="iconic" src="layersdown.svg"/>
 						<p>When risks are &ldquo;addressed&rdquo; they are usually pushed either up or down the stack</p>
 						<p>They end up <em>requiring</em> trust in End-User Behaviour (unpatchable) or in the Hardware</p>
 
@@ -184,19 +188,19 @@
                 <section>
                 	<section>
 						<h2>How does OneRNG help?</h2>
-						<img id="iconic" src="audit.svg">
+						<img id="iconic" src="audit.svg"/>
                     	<p>Being an Open Hardware and Open Source solution is a start</p>
                     	<p>But the OneRNG is also designed to be <strong><i>verifiable</i></strong></p>
                     </section>
                     <section>
                     	<h2>No Trust Needed</h2>
-						<img id="iconic" src="skydiving.svg">
+						<img id="iconic" src="skydiving.svg"/>
                     	<p>You should not trust this device &mdash; you do not <i>need</i> to trust this device</p>
                     	<p>You should <strong><i>VERIFY</i></strong> that what you physically hold is what you need to have</p>
                     </section>
                     <section>
                     	<h2>How to verify the hardware</h2>
-						<p><img id="iconic" src="cpu.svg"></p>
+						<p><img id="iconic" src="cpu.svg"/></p>
                     	<ol>
                            	<li>Remove the Tin-Foil Hat (ours, not yours)</li>
                            	<li>Identify the components</li>
@@ -207,7 +211,7 @@
                     </section>
                     <section>
                     	<h2>How to verify the software</h2>
-						<p><img id="iconic" src="certificate.svg"></p>
+						<p><img id="iconic" src="certificate.svg"/></p>
                         <ol>
                            	<li>Plug the device into a machine</li>
                            	<li>Dump the firmware into a file</li>
@@ -219,7 +223,7 @@
                     </section>
 					<section>
 						<h2>What does verification tell you?</h2>
-						<p><img id="iconic" src="search.svg"></p>
+						<p><img id="iconic" src="search.svg"/></p>
 						<ul>
 							<li>The hardware you received conforms with the description</li>
 							<li>The firmware that is used matches the source</li>
@@ -228,15 +232,115 @@
 					</section>
 				</section>
 
+			<section>
+				<section>
+					<h2>What will OneRNG provide on Linux?</h2>
+					<p>"More Entropy" means that /dev/random is less likely to block</p>
+					<p>"Early Entropy" means that /dev/urandom will be well-seeded before key generation</p>
+					<p>Real independent crypto users have another affordable high-quality source</p>
+				</section>
+				<section>
+					<h2>Using OneRNG with Linux</h2>
+					<p>We provide some software for you to use to make OneRNG an input to <code>/dev/random</code> via <code>rngd</code></p>
+					<p>This is architecture independent - python &amp; shell scripts</p>
+					<p>&hellip; and we don't get involved in your choice of init daemon &hellip;</p>
+				</section>
+				<section>
+					<h2>Just plug it in &hellip;</h2>
+					<p>UDEV detects the device (using an ID assigned from OpenMoko's range)</p>
+					<p>On insertion we validate the firmware, then start <code>rngd</code></p>
+					<p>On removal we remember to stop rngd for you!</p>
+				</section>
+				<section>
+					<h2>&hellip; but never leave me</h2>
+					<p>Increasingly, UDEV implementations make life more complex</p>
+					<p>No-one seems to bother with UDEV removal scripts</p>
+					<p>so the mechanism is probably not very well tested</p>
+				</section>
+				<section>
+					<h2>Serial over USB?</h2>
+					<p>USB CDC drivers are the generic USB serial interface</p>
+					<p>Sadly ModemManager stomps on every one unless you remember
+					to disable it in UDEV</p>
+					<p>OneRNG doesn't support Hayes AT commands &hellip;</p>
+					<p>UDEV: <code>ENV{ID_MM_DEVICE_IGNORE}="1"</code></p>
+					<p>Wireshark will capture USB traffic if you need it - <code>modprobe usbmon</code> first</p>
+					
+				</section>
+			</section>
+
+			<section>
+				<section>
+					<h2>Diversion: What is /dev/random?</h2>
+					<p>It isn't what you think it is (it isn't what I thought it was either)</p>
+					<p>Thomas Hühn provided <a href="http://www.2uo.de/myths-about-urandom/">http://www.2uo.de/myths-about-urandom/</a></p>
+				</section>
+				<section>
+					<h2>This is NOT how it works &hellip;</h2>
+					<img src="structure-no.png"/>
+				</section>
+				<section>
+					<h2>This is more like it &hellip;</h2>
+					<img src="structure-yes.png"/>
+				</section>
+				<section>
+					<h2>/dev/random blocks</h2>
+					<p>Because when written, the NSA-designed SHA-1 was not fully "trusted"</p>
+					<p>The blocking behaviour is a defence against an untrusted DRBG</p>
+					<p><blockquote>Ted T'so, 2015 &ldquo;&hellip; the
+						paranoiacs were *right* that the NSA had introduced a back-door into a
+						crypto algorithm which they gifted to the civilian world.  It just
+						turned out to be DUAL-EC instead of SHA-1.&rdquo;</blockquote></p>
+					<p>Just use <em><code>/dev/urandom</code></em> :-)<p>
+				</section>
+			</section>
+
+			<section>
+				<section>
+					<h2><img id="iconic" src="kickstarter-logo-light.svg"/></h2>
+					<p>In order to get commercial production set up, we went to Kickstarter
+					with an NZD<strong>$10,000</strong> target over 45 days<p>
+					<p>This is still running - we started just after Kiwicon8, on 15 Dec 2014, and will finish
+					a couple of weeks after LCA2015, on 29 Jan 2015</p>
+					<p><a href="https://www.kickstarter.com/projects/moonbaseotago/onerng-an-open-source-entropy-generator">https://www.kickstarter.com/projects/moonbaseotago/onerng-an-open-source-entropy-generator</a></p>
+				</section>
+				<section>
+					<h2><img id="iconic" src="kickstarter-logo-light.svg"/></h2>
+					<p>Rewards:</p>
+					<ul>
+						<li>$50 NZD - a single OneRNG from bulk manufacturing</li>
+						<li>$90 NZD - a device programmer unit</li>
+						<li>$110 NZD - a single hand-built unit</li>
+						<li>$140 NZD - a single OneRNG from bulk, plus programmer</li>
+						<li>$190 NZD - a single hand-build unit, plus programmer</li>
+						<li>$200 NZD - 5 pack OneRNG from bulk</li>
+						<li>$290 NZD - 5 pack OneRNG from bulk, plus one programmer</li>
+						<li>$400 NZD - 10 pack OneRNG from bulk</li>
+				</section>
+				<section>
+					<h2><img id="iconic" src="kickstarter-logo-light.svg"/></h2>
+				</section>
+				<section>
+					<h2><img id="iconic" src="kickstarter-logo-light.svg"/></h2>
+					<p>50%&nbsp;&nbsp;funded after 2 days</p>
+					<p>100% funded after 6 days</p>
+					<p>200% funded after 18 days</p>
+					<p>Least Squares currently predicts 400% funding at close :-)</p>
+					<h3>Current position</h3>
+					<p>Jan 7 2015: <strong>210</strong> backers, NZD<strong>$22,985</strong> raised, <strong>21</strong> days to go</p>
+				</section>
+			</section>
+
 				<section>
 					<section>
 						<h2>What next?</h2>
-						<h3 class="fragment">Kickstarter</h3>
-						<h3 class="fragment">http://onerng.info/</h3>
+						<h2>Q &amp; A</h2>
+						<h3>http://onerng.info/</h3>
 					</section>
 					<section>
-						<h2>Image Credits</h2>
-						<img id="iconic" src="thenounprojectlogo.svg">
+						<h2>Credits</h2>
+						<p>Presentation software - <a href="https://github.com/hakimel/reveal.js">reveal.js</a>, hosted on <a href="https://github.com/">Github</a></p>
+						<img id="iconic" src="thenounprojectlogo.svg"/>
 						<p>Icons used are from <a href="http://thenounproject.com/">The Noun Project</a>, <a href="http://creativecommons.org/licenses/by/3.0/us/">http://creativecommons.org/licenses/by/3.0/us/</a> licensed</p>
 						<p>
 							<a href="http://thenounproject.com/term/arrow/6160/">Arrow</a> and <a href="http://thenounproject.com/term/arrow/6161/">Bent Arrow</a> by Thomas Le Bas, 
