Removed a bad Gentoo joke

--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
 					<h2>How does OneRNG help /dev/random?</h2>
 					<p>Even though you should <em>use <code>/dev/urandom</em></code></p>
 					<p>OneRNG helps to avoid the need to block</p>
-					<p>Therefore machines that use /dev/random <em>run faster</em></p>
-					<p>&hellip; even Gentoo!</p>
+					<p>Therefore machines that use /dev/random <em>run faster</em>?</p>
+					<p>Catalyst are simlating workloads to quantify this assertion</p>
 				</section>
 			</section>
 
