More urandom slidery

--- a/index.html
+++ b/index.html
@@ -298,6 +298,14 @@
 					<p>Just use <em><code>/dev/urandom</code></em> :-)<p>
 				</section>
 				<section>
+					<h2>What's the difference between /dev/random and /dev/urandom?</h2>
+					<p>These are fundamentally the same :-)</p>
+					<p>Use <code>/dev/urandom</code></p>
+					<p>Use <code>/dev/urandom</code></p>
+					<p>Use <code>/dev/urandom</code></p>
+					<p>If you already know better, you don't need me to tell you what to do<p>
+				</section>
+				<section>
 					<h2>How does OneRNG help /dev/random?</h2>
 					<p>Even though you should <em>use <code>/dev/urandom</em></code></p>
 					<p>OneRNG helps to avoid the need to block</p>
